[package]
name = "rust-tcp-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = { version = "0.3.14", features = ["extended-siginfo"] }
nix = "0.25.0"
ifstructs = "0.1.1"
ioctl = { version = "0.6", package = "ioctl-sys" }